# praxis

./: Cargo.toml  README.md
src/: basic.wgsl  camera.rs  clock.rs  controller.rs  cube.rs  cube.wgsl  lib.rs  main.rs  model.rs  resources.rs  shader.vert  shader.wgsl  texture.rs  timer.rs  vertex.rs
