[package]
name = "praxis"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytemuck = { version = "1.19.0", features = ["derive"] }
cfg-if = "1"
cgmath = "0.18"
display-info = "0.5.1"
env_logger = "0.11.5"
log = "0.4"
pollster = "0.4.0"
rand = "0.8.5"
tobj = { version = "4.0.2", default-features = false, features = ["async"] }
wgpu = "22"
wgpu_text = "0.9.0"
winit = "0.30.5"

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
